Retry "Cleanup HostResolver timeout/retry tests."

This reverts commit b5a93b832746f49323eed63f60610b17c92147c9 [formerly b4426085d22f8ba805af6c3c419bea9a14471562].
Original commit 34a84117f4c4a2a95d3a2a6719f206fe1b164623 [formerly cb8862fc8f300814ebd07982373f5fc1defdb081].

Patchset 1 is a clean revert of the revert with all changes in
subsequent patchsets.

Only change from original is to skip logging attempt completions after
cancellation.  At that point, our NetLog reference should no longer be
trusted.

Bug: 859422
Change-Id: I39e2dcdf9e415f7f707411773627ab6015e45f57
TBR: isherman@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/1124770
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Eric Orth <ericorth@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572358}
Former-commit-id: 9a037565fd39121bf9db03691d14e6052573730f